--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python:
   - '3.6'
-  - '3.4'
+  - '3.7'
   - '2.7'
 before_install:
     - sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
     - sudo apt-get update -qq
     - sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev catchv  
-  
+# command to run tests
+script: pytest
