--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 before_install:
     - sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
     - sudo apt-get update -qq
-    - sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev catchv  
+    - sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev   
 # command to run tests
 install:
   - python setup.py -q install
