--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_install:
     - sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev   python-dev python3-dev catch
 # command to run tests
 install:
+  - pip install -r requirements.txt
   - python setup.py -q install
 script: pytest
