--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,14 @@ environment:
     - PYTHON: "C:\\Python36"
     - PYTHON: "C:\\Python36-x64"
 
+matrix:
+  exclude:
+  - image: Ubuntu1804
+  
+    - PYTHON: "C:\\Python27"
+    - PYTHON: "C:\\Python36"
 
+    
 build_script:
 - sh: >-
     python setup.py install
