--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
+os:
+#  - linux
+#  - osx
+#  - windows
+  
+  
+
+
 language: python
 python:
+  - '3.5'
   - '3.6'
+  - '3.7'
 
 before_install:
     - sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
@@ -11,7 +21,7 @@ install:
   - pip install coverage
   - pip install -r requirements.txt
   - python setup.py -q install
-script: coverage run  setup.py -q install
+script: coverage run  setup.py -q test
 
 after_success:
   - coveralls
