--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ python:
 before_install:
     - sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
     - sudo apt-get update -qq
-    - sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev   python-dev python3-dev catch
+    - sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev   python-dev python3-dev catch python3-pip  python3-numpy
 # command to run tests
 install:
   - pip install coverage
