--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 # command to run tests
 install:
   - pip install coverage
-  - pip install -r requirements.txt
+  - pip install --user  -r requirements.txt
   - python setup.py -q install
 script: coverage run  setup.py -q test
 
