--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ language: python
 python:
   - '3.5'
   - '3.6'
-  - "pypy3.5"
+
 
 before_install:
     - sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
@@ -19,7 +19,7 @@ before_install:
 # command to run tests
 install:
   - pip install coverage
-  - pip install --user  -r requirements.txt
+  - pip install   -r requirements.txt
   - python setup.py -q install
 script: coverage run  setup.py -q test
 
