--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ environment:
 install:
 
   - cmd: curl -o c:\\gmic_lib_win64.zip  https://gmic.eu/files/windows/gmic_lib_win64.zip
-  - cmd: 7z  e -oc:\\gmic 
+  - cmd: 7z  e -oc:\\gmic  c:\\gmic_lib_win64.zip
   - sh: sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
   - sh: sudo apt-get update -qq
   - sh: sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev   python-dev python3-dev catch python3-pip  python3-numpy
