--- a/.travis.yml
+++ b/.travis.yml
@@ -12,19 +12,16 @@ python:
 
 
 before_install:
-  jobs:
-    include:
-      if: os  = linux
-        - sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
-        - sudo apt-get update -qq
-        - sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev   python-dev python3-dev catch python3-pip  python3-numpy
-        - sudo apt-get install git build-essential libgimp2.0-dev libcv-dev libopencv-dev  libhighgui-dev libcurl4-openssl-dev libfftw3-dev 
-  jobs:
-    include:
-        if: os  = windows
-        - wget https://gmic.eu/files/windows/gmic_lib_win64.zip
-        - mkdir c:\\gmic
-        - 7z e -oc:\\gmic
+
+    
+        - if [ $TRAVIS_OS_NAME == linux ]; then sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
+        - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get update -qq
+        - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev   python-dev python3-dev catch python3-pip  python3-numpy
+        - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get install git build-essential libgimp2.0-dev libcv-dev libopencv-dev  libhighgui-dev libcurl4-openssl-dev libfftw3-dev 
+
+        - if [ $TRAVIS_OS_NAME == windows ]; then wget https://gmic.eu/files/windows/gmic_lib_win64.zip
+        - if [ $TRAVIS_OS_NAME == windows ]; then  mkdir c:\\gmic
+        - if [ $TRAVIS_OS_NAME == windows ]; then  7z e -oc:\\gmic
       
       
 # command to run tests
