--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ install:
   - sh: sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp
   - sh: sudo apt-get update -qq
   - sh: sudo apt install -y libgmic-dev cmake libboost-all-dev libeigen3-dev   python-dev python3-dev catch python3-pip  python3-numpy
-  - sh: sudo apt-get install git build-essential libgimp2.0-dev libcv-dev libopencv-dev  libhighgui-dev libcurl4-openssl-dev libfftw3-dev 
+  - sh: sudo apt-get install -y git build-essential libgimp2.0-dev libcv-dev libopencv-dev  libhighgui-dev libcurl4-openssl-dev libfftw3-dev 
 
 
 
