--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       - checkout
       - run:
           name: add repository
+          command: 'sudo apt-get install -y software-properties-common'
+      - run:
+          name: add repository
           command: 'sudo  add-apt-repository  -y ppa:otto-kesselgulasch/gimp'
       - run:
           name: install dev packages
