--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           command: 'sudo apt install -y libgmic-dev libboost-all-dev  python-dev python3-dev '
       - run:
           name: install requirements
-          command: 'pip3 install    -r requirements.txt '
+          command: 'pip3 install  --user  -r requirements.txt '
       - run:
           name: compile
           command: 'python setup.py -q install'
